# Antarctica

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  GenerateRPM.cmake  LICENSE  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  README.md  main.cpp
DAO/: DAO.h  FileDAO.cpp  FileDAO.h
api/: APIWrapper.cpp  APIWrapperUtils.cpp
models/: File.h  Package.h  Repository.h  User.h
resources/: resources.qrc
resources/certs/: cert.pem
ui/: AddPackageDialog.cpp  AddPackageDialog.h  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  PackageConfigurator.cpp  PackageConfigurator.h  SettingsWindow.cpp  SettingsWindow.h
ui/models/: FileTreeItem.cpp  FileTreeItem.h  FileTreeModel.cpp  FileTreeModel.h  PackageTreeItem.cpp  PackageTreeItem.h  PackageTreeModel.cpp  PackageTreeModel.h  TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeModel.h
ui/models/files/: FileTreeItem.cpp  FileTreeItem.h  FileTreeModel.cpp  FileTreeModel.h
ui/settings/: BackgroundConfigurator.cpp  BackgroundConfigurator.h  ProxyConfigurator.cpp  ProxyConfigurator.h  SectionConfigurator.h  SettingsWindow.cpp  SettingsWindow.h
utils/: DatabaseUtil.cpp  DatabaseUtil.h  Files.hpp  FilesMonitor.cpp  FilesMonitor.h  Login.cpp  Login.h  LoginUtil.cpp  LoginUtil.h  Packages.hpp  Repositories.hpp  SSL.hpp  SSLUtil.hpp  Settings.hpp  UI.hpp
utils/api/: APIWrapper.cpp  APIWrapper.h  FilesWrapper.cpp  PackagesWrapper.cpp  RepositoriesWrapper.cpp
